# cookiecutter-pypackage

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  Dockerfile  MANIFEST.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
