{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.project_slug }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author-email = {{ cookiecutter.email }}
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
    Natural Language :: English
    Programming Language :: Python :: 3.6
keywords = {{ cookiecutter.project_slug }}

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main
},
{%- endif %}

[files]
packages =
    {{ cookiecutter.project_slug }}

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
